# Ilya_python

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
HW2/: Hw2.ipynb  main.py  students.json  test_students.py
